Closed Bug 1676585 Opened 4 years ago Closed 4 years ago

The block-start and block-end border are not painted on the correct side if the block is fragmented in vertical-rl writing mode

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: TYLin, Assigned: TYLin)

References

Details

Attachments

(3 files)

Steps to reproduce:
Open the attached html, and see Testcase 3.

Actual result:
In the writing-mode: vertical-rl multicol, the block-start border (red) of the fragmented block the in first column is not painted. Instead, the red border is painted on the block-end side.

Similarly, the block-end border (green) of the fragmented block in the second column is not painted. Instead, the green border is painted on the block-start side.

Expected result:
The border is painted on the correct side on a fragmented block.

Note: The border is correctly painted if the block isn't fragmented (Testcase 2). The border is also correct if the block is fragmented in writing-mode: vertical-rl multicol (Testcase 1).

This patch shouldn't change the rendering of the test at all.

The original code doesn't work for "writing-mode:vertical-rl" because
its block flow direction is the opposite of "writing-mode:vertical-lr."

Depends on D96785

Assignee: nobody → aethanyc
Severity: -- → S3
Status: NEW → ASSIGNED
Component: Web Painting → Layout
Depends on: 1328095
Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/f3d67ca563cf Part 1 - Simplify vertical-wm-001.html by using logical properties. r=mats https://hg.mozilla.org/integration/autoland/rev/4c7e56ad44b2 Part 2 - Use LogicalRect to compute joining boxes' border area. r=mats
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: