Bug 1676585 Part 2 - Use LogicalRect to compute joining boxes' border area. r=mats

The original code doesn't work for "writing-mode:vertical-rl" because
its block flow direction is the opposite of "writing-mode:vertical-lr."

Differential Revision: https://phabricator.services.mozilla.com/D96786